<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout"
        tools:context=".MovieFragment"
        android:layout_margin="@dimen/small_gap">
        <ImageView
            android:id="@+id/imageView_harry_movie"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/own_page_movie"
            android:layout_marginBottom="24dp"
            android:src="@drawable/harry_potter"
            app:layout_constraintBottom_toTopOf="@+id/textView_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/title_movie"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView_puntuacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_puntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/puntuacion_peli"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/small_gap"
            android:text="@string/example_sipnosis"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_puntuacion" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntuacion_harry"
            android:textColor="@color/calification"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_puntuacion"
            app:layout_constraintTop_toBottomOf="@+id/imageView_harry_movie"
            app:layout_constraintVertical_bias="0.169" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>