<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillboardFragment"
    android:background="@color/backgroundLayout"
    android:id="@+id/pantalla1">

    <TextView
        android:id="@+id/billboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/billboard_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView01"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="@+id/billboardTitle"
        app:layout_constraintStart_toStartOf="@+id/billboardTitle"
        app:layout_constraintTop_toBottomOf="@+id/billboardTitle"
        android:layout_margin="@dimen/small_gap"
        android:backgroundTint="@color/cardLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/image_poster_billboard"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginBottom="@dimen/small_gap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/harry_potter" />

            <TextView
                android:id="@+id/Tituloharry"
                android:layout_width="250dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:text="@string/title_harry_p"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_title_card_view"
                app:layout_constraintBottom_toTopOf="@+id/puntuacion"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuacion_harry_p"
                android:textColor="@color/calification"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/Tituloharry" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_crear_pelicula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_gap"
        android:layout_marginBottom="@dimen/small_gap"
        android:clickable="true"
        android:contentDescription="Add movie"
        android:src="@drawable/baseline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView02"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView01"
        app:layout_constraintStart_toStartOf="@+id/billboardTitle"
        app:layout_constraintTop_toBottomOf="@+id/cardView01"
        android:layout_margin="@dimen/small_gap"
        android:backgroundTint="@color/cardLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagestar"
            android:layout_height="match_parent"
            android:layout_width="@dimen/image_poster_billboard"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginBottom="@dimen/small_gap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star_wars"/>



        <TextView
            android:id="@+id/TituloS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/title_star_wars"
            android:textColor="@color/white"
            android:textSize="@dimen/movie_title_card_view"
            app:layout_constraintBottom_toTopOf="@+id/puntuacion2"
            app:layout_constraintStart_toEndOf="@+id/imagestar"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/puntuacion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntuacion_star_wars"
            android:textColor="@color/calification"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagestar"
            app:layout_constraintTop_toBottomOf="@+id/TituloS" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

